// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render and change 1`] = `
<div>
  <label
    className="spacer-bottom"
  >
    onboarding.create_organization.choose_payment_method
  </label>
  <div
    className="little-spacer-top"
  >
    <RadioToggle
      disabled={false}
      name="payment-method"
      onCheck={[MockFunction]}
      options={
        Array [
          Object {
            "label": "billing.card",
            "value": "card",
          },
          Object {
            "label": "billing.coupon",
            "value": "coupon",
          },
        ]
      }
      value={null}
    />
  </div>
</div>
`;

exports[`should render and change 2`] = `
<div>
  <label
    className="spacer-bottom"
  >
    onboarding.create_organization.choose_payment_method
  </label>
  <div
    className="little-spacer-top"
  >
    <RadioToggle
      disabled={false}
      name="payment-method"
      onCheck={
        [MockFunction] {
          "calls": Array [
            Array [
              "card",
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
      options={
        Array [
          Object {
            "label": "billing.card",
            "value": "card",
          },
          Object {
            "label": "billing.coupon",
            "value": "coupon",
          },
        ]
      }
      value="card"
    />
  </div>
</div>
`;
